src/objects/Quality_Control__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Goal__c</fullName>
        <label>Daily Goal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Quality Control</relationshipLabel>
        <relationshipName>Quality_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mentor_Comments__c</fullName>
        <label>Mentor Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Errors__c</fullName>
        <label>Number of Errors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OT_Hours_Worked__c</fullName>
        <label>OT Hours Worked</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Worked__c</fullName>
        <label>Queue Worked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegHoursWorked__c</fullName>
        <label>Reg Hours Worked</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touched__c</fullName>
        <description>Number of reports touched</description>
        <inlineHelpText>Number of reports touched</inlineHelpText>
        <label>Touched</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Control</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Quality Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>